Name:          galois-dwarf
Version:       0.2.2
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Simon Winwood, Eyal Lotem, Erik Charlebois
Copyright:     Simon Winwood, Eyal Lotem, Erik Charlebois
Maintainer:    Simon Winwood <sjw@galois.com>
Stability:     unstable
Cabal-Version: >= 1.10
Build-Type:    Simple
Synopsis:      Parser for DWARF debug format.
Description:   Parser for DWARF debug format.

source-repository head
  type: git
  location: https://github.com/GaloisInc/dwarf.git

library
    build-depends:   base >= 2 && < 5, transformers >= 0.3,
                     bytestring, containers, binary
    hs-source-dirs:  src
    exposed-modules:
      Data.Dwarf
      Data.Dwarf.Internals
    other-modules:
      Data.Dwarf.AT,
      Data.Dwarf.ATE,
      Data.Dwarf.CFA,
      Data.Dwarf.Form,
      Data.Dwarf.Frame,
      Data.Dwarf.LNI,
      Data.Dwarf.OP,
      Data.Dwarf.Reader,
      Data.Dwarf.TAG,
      Data.Dwarf.Types
    ghc-options:     -Wall

test-suite galois-dwarf-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:
    base,
    binary,
    bytestring,
    galois-dwarf,
    mtl
